# agent-lens

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: check.sh  cross-build.sh  docker-build.sh  fmt.sh  lint.sh  run.sh  test.sh
src/: browser.rs  html.rs  lib.rs  main.rs  markdown.rs  mcp.rs  server.rs
tests/: integration.rs
